// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputList> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {dataSource} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#f4f4f4",
            "color": "#cccccc",
          },
          false,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          Object {
            "borderColor": "#ef5160",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "color": "#ef5160",
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputList> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        Object {
          "fontSize": 12,
          "lineHeight": 14.399999999999999,
        },
        false,
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "marginVertical": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<InputList> when {itemTemplate} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 10,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/1",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          one
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/2",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          two
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/3",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          three
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/4",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          four
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/5",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          five
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<InputList> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 10,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        one
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        two
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        three
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        four
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CDD2D4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 1,
          "minHeight": 32,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        five
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 10,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
